docs/pages/versions/v57.0.0/sdk/ui/swift-ui/form.mdx
---
title: Form
description: A SwiftUI Form component for collecting user input in a structured layout.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['ios', 'tvos', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

Expo UI Form matches the official SwiftUI [Form API](https://developer.apple.com/documentation/swiftui/form). It provides a container for grouping controls used for data entry, such as in settings or inspection panes.

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/form/ios-light.webp"
  darkSrc="/static/images/expo-ui/form/ios-dark.webp"
  alt="A Form with two grouped Sections of Toggles and a footer caption"
/>

## Installation

<APIInstallSection />

## Usage

### Basic form

<ComponentExample
  title="BasicFormExample.tsx"
  src="/static/images/expo-ui/examples/form-basic-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/form-basic-ios-dark.webp"
  alt="A form holding a single Enter your name text field">

```tsx
import { Host, Form, TextField } from '@expo/ui/swift-ui';

export default function BasicFormExample() {
  return (
    <Host style={{ flex: 1 }}>
      <Form>
        <TextField placeholder="Enter your name" />
      </Form>
    </Host>
  );
}
```

</ComponentExample>

### Form with sections

Use the [`Section`](section) component to group related controls within a form.

<ComponentExample
  title="FormWithSectionsExample.tsx"
  src="/static/images/expo-ui/examples/form-with-sections-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/form-with-sections-ios-dark.webp"
  alt="A form with a Profile section of two fields, a Preferences section of two toggles, and a Save changes button">

```tsx
import { useState } from 'react';
import {
  Host,
  Form,
  Section,
  TextField,
  Toggle,
  Button,
} from '@expo/ui/swift-ui';

export default function FormWithSectionsExample() {
  const [notifications, setNotifications] = useState(false);
  const [darkMode, setDarkMode] = useState(false);

  return (
    <Host style={{ flex: 1 }}>
      <Form>
        <Section title="Profile">
          <TextField placeholder="Name" />
          <TextField placeholder="Email" />
        </Section>

        <Section title="Preferences">
          <Toggle
            label="Enable notifications"
            isOn={notifications}
            onIsOnChange={setNotifications}
          />
          <Toggle
            label="Dark mode"
            isOn={darkMode}
            onIsOnChange={setDarkMode}
          />
        </Section>

        <Section>
          <Button
            label="Save changes"
            onPress={() => console.log('Saved!')}
          />
        </Section>
      </Form>
    </Host>
  );
}
```

</ComponentExample>

### Form with custom background

Use the `scrollContentBackground` modifier to customize or hide the form's background.

<ComponentExample
  title="FormBackgroundExample.tsx"
  src="/static/images/expo-ui/examples/form-background-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/form-background-ios-dark.webp"
  alt="A form with a light grey background behind a Custom Background section">

```tsx
import { Host, Form, Section, TextField } from '@expo/ui/swift-ui';
import {
  scrollContentBackground,
  background,
} from '@expo/ui/swift-ui/modifiers';

export default function FormBackgroundExample() {
  return (
    <Host style={{ flex: 1 }}>
      <Form
        modifiers={[
          scrollContentBackground('hidden'),
          background('#F0F0F0'),
        ]}>
        <Section title="Custom Background">
          <TextField placeholder="Enter text" />
        </Section>
      </Form>
    </Host>
  );
}
```

</ComponentExample>

### Non-scrollable form

Use the [`scrollDisabled`](modifiers/#scrolldisableddisabled) modifier to prevent the form from scrolling.

> **Note:** The `scrollDisabled` modifier is only available on iOS 16+ and tvOS 16+.

<ComponentExample
  title="NonScrollableFormExample.tsx"
  src="/static/images/expo-ui/examples/form-non-scrollable-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/form-non-scrollable-ios-dark.webp"
  alt="A form with a Settings section holding one Enable feature toggle">

```tsx
import { useState } from 'react';
import {
  Host,
  Form,
  Section,
  TextField,
  Toggle,
} from '@expo/ui/swift-ui';
import { scrollDisabled } from '@expo/ui/swift-ui/modifiers';

export default function NonScrollableFormExample() {
  const [isOn, setIsOn] = useState(false);

  return (
    <Host style={{ flex: 1 }}>
      <Form modifiers={[scrollDisabled()]}>
        <Section title="Settings">
          <Toggle
            label="Enable feature"
            isOn={isOn}
            onIsOnChange={setIsOn}
          />
        </Section>
      </Form>
    </Host>
  );
}
```

</ComponentExample>

### Pull-to-refresh form

Use the `refreshable` modifier to add pull-to-refresh functionality.

<ComponentExample
  title="RefreshableFormExample.tsx"
  src="/static/images/expo-ui/examples/form-refreshable-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/form-refreshable-ios-dark.webp"
  alt="A form with a Pull to refresh section showing the last refresh time">

```tsx
import { useState, useCallback } from 'react';
import { Host, Form, Section, Text } from '@expo/ui/swift-ui';
import { refreshable } from '@expo/ui/swift-ui/modifiers';

export default function RefreshableFormExample() {
  const [lastRefresh, setLastRefresh] = useState(new Date());

  const handleRefresh = useCallback(async () => {
    // Simulate network request
    await new Promise(resolve => setTimeout(resolve, 1500));
    setLastRefresh(new Date());
  }, []);

  return (
    <Host style={{ flex: 1 }}>
      <Form modifiers={[refreshable(handleRefresh)]}>
        <Section title="Pull to refresh">
          <Text>
            Last refreshed: {lastRefresh.toLocaleTimeString()}
          </Text>
        </Section>
      </Form>
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import { Form } from '@expo/ui/swift-ui';
```

<APISection packageName="expo-ui/swift-ui/form" apiName="Form" />
